# ChangeLog for net-misc/mulk
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Feb 2010; Sebastian Pipping <sping@gentoo.org> +mulk-0.5.1_beta.ebuild:
  Trivial-bump to 0.5.1

  22 Sep 2009; Sebastian Pipping (sping) <sebastian@pipping.org>
  +mulk-0.5.0_beta.ebuild, +metadata.xml:
  New Ebuild for bug 273119
