@@ -1,6 +1,4 @@
-DIST mulk-0.5.0.tar.gz 163778 RMD160 bfd9dba354eabed1ef59684341720dac656a9ca8 SHA1 2991d2ba7697b1f6549385a9d5188c68ece4b8dc SHA256 1395f7929ebaeb12ebcc9f830f98e1d11cbfecf24a1a879c9de7585f85aa7b29
 DIST mulk-0.5.1.tar.gz 242808 RMD160 9ef9aede42376d54f9da806671dd89bd327fd465 SHA1 59db961e21082a50f2e437ecc99f692818e7569d SHA256 729ce24a097d639407d05ffc44bd844f1b5de1f2969078b4c5b6280902462782
-EBUILD mulk-0.5.0_beta.ebuild 724 RMD160 a073050b561837a45eb66ec9a3d4948f563ad7f7 SHA1 df1752f67f3b140bcaec5b772a8973674765e7db SHA256 6133258f7472b6571923645c7d522ff137c1b449337efe13dcc1c00a252bd611
 EBUILD mulk-0.5.1_beta.ebuild 724 RMD160 a073050b561837a45eb66ec9a3d4948f563ad7f7 SHA1 df1752f67f3b140bcaec5b772a8973674765e7db SHA256 6133258f7472b6571923645c7d522ff137c1b449337efe13dcc1c00a252bd611
-MISC ChangeLog 352 RMD160 3fe8f259a93c41e7877b975fd724f7e50a680796 SHA1 45e32464f71e355f3838eb33bcf18579bce1fa23 SHA256 83a1f794b3b7afe4c87962a41915f42deac54e98bb4b3ef6f59d6d08a1bffe64
+MISC ChangeLog 458 RMD160 7794c89a3bd7dee3bc6d2ca0db3f7f68e6073fb1 SHA1 9177a1e5cbd27883b8aa1a8593c810a2996d3942 SHA256 c8246b72f2742120acf1a1dec42884755e1cc91f7c585189930e591e84959dc7
 MISC metadata.xml 371 RMD160 8a316b6c5f2a6e8e1f9c001712549c31526aba7f SHA1 3b6316b20976d157bfd29366f679059c8cced3ec SHA256 11a639fbf09dba04373e72909c3d6a5d5513a1c520b436039d734e45b2e1dd13
