@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Feb 2010; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  -mulk-0.5.0_beta.ebuild:
+  Nuke old version
+
   05 Feb 2010; Sebastian Pipping <sping@gentoo.org> +mulk-0.5.1_beta.ebuild:
   Trivial-bump to 0.5.1
 
